<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pokemon_dark_red">

    <ImageView
        android:id="@+id/listFragment_filterImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_baseline_filter_list_24"
        app:layout_constraintBottom_toBottomOf="@id/listFragment_search_view"
        app:layout_constraintLeft_toRightOf="@id/listFragment_search_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/listFragment_search_view" />


    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ProgressBar
        android:id="@+id/listFragment_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:elevation="2dp"
        android:indeterminateDrawable="@drawable/progress_bar"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/listFragment_swipeToRefresh"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/listFragment_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pokemonsolid"
        android:padding="@dimen/padding"
        android:text="PokeDex"
        android:textColor="@color/pokemon_yellow"
        android:textSize="@dimen/pokemon_list_fragment_title_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/listFragment_search_view"
        style="@style/SearchViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        android:imeOptions="flagNoExtractUi"
        android:queryHint="Ivysaur"
        app:iconifiedByDefault="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/listFragment_filterImg"
        app:layout_constraintTop_toBottomOf="@id/listFragment_Title" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/listFragment_swipeToRefresh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginBottom="?actionBarSize"
        android:imeOptions="flagNoExtractUi"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/listFragment_search_view">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listFragment_rv"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp"
            tools:listitem="@layout/list_row_item" />


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listFragment_paginate_progress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:indeterminateDrawable="@drawable/progress_bar"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible"
        android:visibility="gone"/>


    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/listFragment_saved_FAB"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="@dimen/FAB_Margin"
        android:src="@drawable/pokeball"
        app:civ_border="false"
        app:civ_shadow="true"
        app:civ_shadow_color="@color/pokemon_blue_shadow"
        app:civ_shadow_radius="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/listFragment_map_FAB"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="@dimen/FAB_Margin"
        android:src="@drawable/map_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>