<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/pokemon_card_color_dark"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/filter_dialog_ll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message_dialog_Title"
        app:layout_constraintBottom_toTopOf="@+id/dialog_cancel_button">

        <ImageView
            android:id="@+id/dialog_grass_img"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:src="@drawable/grass_dialog" />

        <ImageView
            android:id="@+id/dialog_water_img"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:src="@drawable/water_dialog" />

        <ImageView
            android:id="@+id/dialog_fire_img"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:src="@drawable/fire_dialog" />


    </LinearLayout>


    <TextView
        android:id="@+id/message_dialog_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/search_pokemon_by_type"
        android:padding="6dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/pokemon_title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dialog_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:backgroundTint="@color/pokemon_card_save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>