<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pokemon_dark_red"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_card"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:padding="16dp">


        <Button
            android:id="@+id/detailFragment_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mapview"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/pokemon_card_save_button"
            android:text="Save Pokemon"
            android:textSize="@dimen/pokemon_title_text_size"
            android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/mapview"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_below="@id/detailFragment_map_ll"
            android:layout_centerInParent="true"
            android:background="@drawable/mapview">


            <ImageView
                android:id="@+id/mapview_plot"
                android:layout_width="90dp"
                android:layout_height="90dp"
                tools:src="@drawable/place_holder_img" />

        </FrameLayout>


        <ImageView
            android:id="@+id/detailFragment_Image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/pokemon_image_height"
            android:layout_below="@id/detailFragment_star_container"
            android:background="@drawable/silver_gradient"
            tools:src="@drawable/place_holder_img" />

        <LinearLayout
            android:id="@+id/detailFragment_star_container"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detailFragment_title_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:text="Pikachu" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/detailFragment_star"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/star" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/stats_title_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/abilities_container"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="100">


            <TextView
                android:id="@+id/detailFragment_title_stats"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="90"
                android:text="Statistics"
                android:textColor="@color/white"
                android:textSize="@dimen/pokemon_type_text_size"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/stats_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/stats_title_container"
            android:orientation="vertical"
            android:padding="10dp" />

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detailFragment_Image"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="100">

            <TextView
                android:id="@+id/detailFragment_title_abilities"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/recipe_title"
                android:layout_weight="90"
                android:text="Abilities"
                android:textColor="@color/white"
                android:textSize="@dimen/pokemon_type_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detailFragment_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/pokemon_type_text_size"
                tools:text="Type: Grass" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/detailFragment_map_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/stats_container"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/detailFragment_map_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Last Know Location"
                android:textColor="@color/white"
                android:textSize="@dimen/pokemon_title_text_size"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/abilities_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/container"
            android:orientation="vertical"
            android:padding="10dp" />


    </RelativeLayout>


</ScrollView>