...

    <ImageView
        android:id="@+id/listFragment_settingsImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/SavedFragment_Title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/SavedFragment_Title"
        app:srcCompat="@drawable/ic_baseline_settings_24" />


    <ProgressBar
...
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SavedFragment_Title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/savedFragment_rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_marginBottom="?actionBarSize"
        android:padding="@dimen/padding"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
...
